[tool.poetry]
name = "steve-bot"
version = "0.1.0"
description = "open-source bot or smth wow so cool wow yeah yeah wohoo"
authors = ["DetetivePao"]

[tool.poetry.dependencies]
python = "^3.10"
discord.py = "^2.3.2"
yt_dlp = "*"
flask = "*"
pyttsx3 = "*"
language-tool-python = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
